--- a/Shop.html
+++ b/Shop.html
@@ -54,35 +54,37 @@
 
           <div class="shop">
               <h1>Jax Owen</h1>
-                <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-                <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
+                <img class="shop_img" src="style/P4V_J.jpg" height="150">
+                <img class="shop_img" src="style/P4A_J.jpg" height="150">
             <p>
               Jax owen pt.2
               Jax Owen's comeback album! The Britisch punk legend comes back with this album that contains the
-              old and the new songs. Enjoy this deluxe album for only 19,99
+              old and the new songs. Enjoy this deluxe album for only <button class="buy" type="button">19,99</button>
             </p>
 
-              <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-              <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
+              <img class="shop_img" src="style/P2V_J.jpg" height="150">
+              <img class="shop_img" src="style/P2A_J.jpg" height="150">
             <p>
               The trip
               This nostalgic album is based on his trip to London, he looks back on an amazing time he had back
-              then. Available for 14,99
+              then. Available for <button class="buy" type="button">14,99</button>
             </p>
 
-              <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-              <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
+              <img class="shop_img" src="style/P3V_J.jpg" height="150">
+              <img class="shop_img" src="style/P3A_J.jpg" height="150">
             <p>
               The sixth of January, two thousand eighteen
               Dedicated to his daughter who passed away at the age of 15 made Jax this deep piece of art. He putted a lot of hard work and effort in this one.
-              Listen to this important part of his life for 14,99
+              Listen to this important part of his life for
+              <button class="buy" type="button">14,99</button>
             </p>
 
-              <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-              <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
+
+              <img class="shop_img" src="style/P1V_J.jpg" height="150">
+              <img class="shop_img" src="style/P1A_J.jpg" height="150">
             <p>
               Externity
-              The final chapter of his punk life. Jax Owen says goodbye to the punk scene with his last masterpiece. Available for only 14,99
+              The final chapter of his punk life. Jax Owen says goodbye to the punk scene with his last masterpiece. Available for only <button class="buy" type="button">14,99</button>
             </p>
           </div>
 
@@ -92,27 +94,62 @@
             <img class="shop_img" src="style/p2a.png" height="150">
             <p class="text_shop">
               Trident's First album! he named it after him self to get he's name out in the world of punk.
-              now for only 15$
+              now for only<button class="buy" type="button">14,99</button>
             </p>
             <img class="shop_img" src="style/p1v.png" height="150">
             <img class="shop_img" src="style/p1a.png" height="150">
             <p class="text_shop">
               Trident's second album! The freedom of getting out of prison and making music.
-              now for only 10$
+              now for only<button class="buy" type="button">9,99</button>
             </p>
             <img class="shop_img" src="style/p3v.png" height="150">
             <img class="shop_img" src="style/p3a.png" height="150">
             <p class="text_shop">
               Trident's third album! he called it Dead Inside because thats how he felt in prison and letting he's family down.
-              now for only 12$
+              now for only <button class="buy" type="button">12,99</button>
             </p>
             <img class="shop_img" src="style/p4v.png" height="150">
             <img class="shop_img" src="style/p4a.png" height="150">
             <p class="text_shop">
               Trident's fourth album! with real bullet holes from hes old police gun.
-              now for only 35$
+              now for only <button class="buy" type="button">19,99</button>
             </p>
 
+
+          </div>
+
+
+          <div class="shop">
+            <h1>The Chiefs</h1>
+
+            <img class="shop_img" src="style/P1V_D.png" height="150">
+            <img class="shop_img" src="style/P1A_D.png" height="150">
+            <p>
+              Survival of the Weakest:
+                  Survival of the weakest is about the current society. The Chiefs are sick and tired of the mainstream music and want to show people that good old punk music still exists!
+                    now for <button class="buy" type="button">14,99</button>
+            </p>
+
+            <img class="shop_img" src="style/P2V_D.png" height="150">
+            <img class="shop_img" src="style/P2A_D.png" height="150">
+            <p>
+              The Chiefs are ending with a banger; For Punk’s Sake. One last album just for the sake of PUNK!
+              now for <button class="buy" type="button">14,99</button>
+            </p>
+
+            <img class="shop_img" src="style/P3V_D.png" height="140">
+            <img class="shop_img" src="style/P3A_D.png" height="140">
+            <p>
+              After a long break The Chiefs are back WITH their drummer Reed! London Falling is a wordplay on the album London Calling from The Clash. It’s nothing more than a typical punk album.
+              now for <button class="buy" type="button">14,99</button>
+            </p>
+
+            <img class="shop_img" src="style/P4V_D.png" height="150">
+            <img class="shop_img" src="style/P4A_D.png" height="150">
+            <p>
+              Trail of Tears is a tribute to their band member Reed, who was forced to go to a psychiatric hospital due to his mental illness. With this album they want to raise awareness for mental health.
+              now for <button class="buy" type="button">19,99</button>
+            </p>
 
           </div>
 
@@ -142,37 +179,6 @@
               <p>
                 hier komt text die ik nog niet heb gekregen.
               </p>
-
-          </div>
-
-
-
-          <div class="shop">
-            <h1>The Chiefs</h1>
-
-            <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-            <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-            <p>
-              hier komt text die ik nog niet heb gekregen.
-            </p>
-
-            <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-            <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-            <p>
-              hier komt text die ik nog niet heb gekregen.
-            </p>
-
-            <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-            <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-            <p>
-              hier komt text die ik nog niet heb gekregen.
-            </p>
-
-            <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-            <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-            <p>
-              hier komt text die ik nog niet heb gekregen.
-            </p>
 
           </div>
 
