--- a/Artists.html
+++ b/Artists.html
@@ -54,18 +54,24 @@
         <div class="Artist">
         <h1> Jax Owen </h1>
 
-        <p> <img src="style/logo_j.png" class="logo_a"/>Jax owen is al lang geen onbekende meer in de Britse punk-scene, de held van de jaren 90 toen hij met zijn 18 jaar jong elke punkparty plat ging spelen. Jax owen die dit jaar 40 wordt mag je nog lang niet afschrijven.
-           Hij heeft zijn carrière op hold gezet van zijn 30 jaar. Hij is van plan om na 10 jaar de comeback van zijn leven te maken. Hij wilt dit aanpakken door bij een nieuw label te tekenen en 4 nieuwe platen uit te brengen.
-            Hij besloot om zijn carrière terug op te pikken omdat zijn dochtertje dit jaar overleden is op 15-jarige leeftijd, ze verloor de strijd tegen kanker. Hij wou een ode brengen aan zijn dochter in de vorm die heel zijn leven heeft bepaald, punk muziek! </p>
+        <p> <img src="style/logo_j.png" class="logo_a"/>Jax owen, is kind of a legend in the Britisch punk scene, the hero of the nineties when he crashed every punkparty with is his young energy. Jax turns 40 this year  and is planning his comeback because he set his career on hold when he turned 30 to focus on his family. So after 10 years he is planning the biggest comeback in punk history. He singed a deal with a new record label where he will release 4 brand new albums.
+He decided to pick his career back up after his little girl died at the age of 15, she lost the fight against cancer. He wanted to bring a tribute to her in a way he could process it in his own way, off course this was punk music!
+ </p>
+        <a href="Shop.html#jax">To he's shop</a>
         </div>
 
         <div class="Artist">
         <h1> Trident</h1>
           <p><img src="style/logo-Trident.png" width="150" class="logo_a"/>
-            Trident is een ex corrupte politie. Hij werd tijdens een bank overval opgebakt door één van zijn collega's na een lange achtervolging.hij heeft 15jaar in de bak gezeten is nu dtahij vrij is begonnen met muziek.
-            Zijn muziek gaat over zijn haat voor de politie gemengd met Hard core Punk. Hij heeft zich bij BPM aangesloten omdat hij merkt dat mensen zijn muziek goed vinden, de geld wolf dat hij is wilt hier dus zo veel mogelijk uithalen.
-            De naam Trident komt van zijn oude politie Titel(gewapende politie).
+          Trident is an ex corrupt police agent. He got arrested for robbing a bank.
+            For this he did 15years of prison but naw that he's free he turned to music.
+            he's music is all about how much he hates the police mix in a hard core punk style.
+            He joined PBM 'Britse Punk Music' because he was starting to get popular and needed a helping hand of some professionals.
+            Trident realy likes money en by joining BPM he kan make alot more.
+            The Name Trident comes from he's eX-Police Title (Armed-Police).
+
           </p>
+          <a href="Shop.html#trident">To he's shop</a>
         </div>
 
         <div class="Artist">
@@ -76,6 +82,7 @@
           tralalalala ralalalala ralalalala ralalalala ralalalala ralalalala v v tralalalalaralalalalaralalalalaralalalala ralalalala ralalalala ralalalala
 
         </p>
+        <a href="Shop.html#rogue">To there shop</a>
         </div>
 
         <div class="Artist">
@@ -86,6 +93,7 @@
         tralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala tralalalalaralalalala ralalalala
         tralalalala ralalalala ralalalala ralalalala ralalalala ralalalala v v tralalalalaralalalalaralalalalaralalalala ralalalala ralalalala ralalalala
         </p>
+        <a href="Shop.html#chief">To there shop</a>
         </div>
 
         <img
