--- a/Shop.html
+++ b/Shop.html
@@ -53,7 +53,7 @@
 
 
           <div class="shop">
-              <h1>Jax Owen</h1>
+              <h1 id="jax">Jax Owen</h1>
                 <img class="shop_img" src="style/P4V_J.jpg" height="150">
                 <img class="shop_img" src="style/P4A_J.jpg" height="150">
             <p>
@@ -89,7 +89,7 @@
           </div>
 
           <div class="shop">
-            <h1>Trident </h1>
+            <h1 id="trident">Trident </h1>
             <img class="shop_img" src="style/p2v.png" height="150">
             <img class="shop_img" src="style/p2a.png" height="150">
             <p class="text_shop">
@@ -120,7 +120,7 @@
 
 
           <div class="shop">
-            <h1>The Chiefs</h1>
+            <h1 id="chief">The Chiefs</h1>
 
             <img class="shop_img" src="style/P1V_D.png" height="150">
             <img class="shop_img" src="style/P1A_D.png" height="150">
@@ -154,30 +154,44 @@
           </div>
 
           <div class="shop">
-              <h1>Rogue Infection </h1>
+              <h1 id="rogue">Rogue Infection </h1>
 
-              <img class="shop_img" src="style/p1v_isk.jpg" height="150">
-              <img class="shop_img" src="style/p1a_isk.jpg" height="150">
+              <img class="shop_img" src="style/P1V_I.jpg" height="150">
+              <img class="shop_img" src="style/P1A_I.jpg" height="150">
               <p>
-                hier komt text die ik nog niet heb gekregen.
+                Rogue infection
+                  With this album we want to
+                  start spreading the Rogue Infection
+                  Are you infected already?
+                <button class="buy" type="button">14,99</button>
               </p>
 
-              <img class="shop_img" src="style/p2v_isk.jpg" height="150">
-              <img class="shop_img" src="style/p2a_isk.jpg" height="150">
+              <img class="shop_img" src="style/P4V_I.jpg" height="150">
+              <img class="shop_img" src="style/P4A_I.jpg" height="150">
               <p>
-                hier komt text die ik nog niet heb gekregen.
+                Bad Memories
+                    You want to forget something.
+                    You don't want to except.
+                    Just break the screen, break the image.
+                <button class="buy" type="button">16,99</button>
               </p>
 
-              <img class="shop_img" src="style/p3v_isk.jpg" height="150">
-              <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
+              <img class="shop_img" src="style/P3V_I.jpg" height="130">
+              <img class="shop_img" src="style/P3A_I.jpg" height="130">
               <p>
-                hier komt text die ik nog niet heb gekregen.
+
+                <button class="buy" type="button">14,99</button>
               </p>
 
-              <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
-              <img class="shop_img" src="style/Ontwerpplatenhoes.png" height="150">
+              <img class="shop_img" src="style/P2V_I.jpg" height="130">
+              <img class="shop_img" src="style/P2A_I.jpg" height="130">
               <p>
-                hier komt text die ik nog niet heb gekregen.
+                Social cage
+                  The world around us does't except us.
+                  We’re stuck in this social cage.
+                  can't break free.
+                  do we really want to?
+                <button class="buy" type="button">19,99</button>
               </p>
 
           </div>
