--- a/Artists.html
+++ b/Artists.html
@@ -57,7 +57,7 @@
         <p> <img src="style/logo_j.png" class="logo_a"/>Jax owen, is kind of a legend in the Britisch punk scene, the hero of the nineties when he crashed every punkparty with is his young energy. Jax turns 40 this year  and is planning his comeback because he set his career on hold when he turned 30 to focus on his family. So after 10 years he is planning the biggest comeback in punk history. He singed a deal with a new record label where he will release 4 brand new albums.
 He decided to pick his career back up after his little girl died at the age of 15, she lost the fight against cancer. He wanted to bring a tribute to her in a way he could process it in his own way, off course this was punk music!
  </p>
-        <a href="Shop.html#jax">To he's shop</a>
+        <a class="link" href="Shop.html#jax">To he's shop</a>
         </div>
 
         <div class="Artist">
@@ -71,29 +71,37 @@ He decided to pick his career back up after his little girl died at the age of 1
             The Name Trident comes from he's eX-Police Title (Armed-Police).
 
           </p>
-          <a href="Shop.html#trident">To he's shop</a>
+          <a class="link" href="Shop.html#trident">To he's shop</a>
         </div>
 
         <div class="Artist">
         <h1> Rogue Infection</h1>
         <p> <img src="style/logo_isk.png" width="150" class="logo_a"/>
-          hier komt nog een heeeeeeeeel mooie text over de artist van iskandra joepie.
-          tralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala tralalalalaralalalala ralalalala
-          tralalalala ralalalala ralalalala ralalalala ralalalala ralalalala v v tralalalalaralalalalaralalalalaralalalala ralalalala ralalalala ralalalala
+          Rogue Infection Is an all girls band.
+          They all want the same, play their own music.
+          the members of the group are Ivy, Scarlet, Silver and Sky.
+          They accidentally met while playing music in the streets of Camden Town.
+          Because of the same taste in music and their matching personalities
+          they created Rogue Infection.
+          Their songs are mostly about what they like or don't like about modern society
+          and about their own experiences.
 
         </p>
-        <a href="Shop.html#rogue">To there shop</a>
+        <a class="link" href="Shop.html#rogue">To there shop</a>
         </div>
 
         <div class="Artist">
         <h1> The Chiefs</h1>
         <p>
         <img src="style/logo_d.png" class="logo_a"width="250"/>
-        hier komt nog een heeeeeeeeel mooie text over de artist van daphne joepie.
-        tralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala ralalalala tralalalalaralalalala ralalalala
-        tralalalala ralalalala ralalalala ralalalala ralalalala ralalalala v v tralalalalaralalalalaralalalalaralalalala ralalalala ralalalala ralalalala
+          Sid, Frank, Rocco and Reed are British punkers from London.
+          They’ve known each other since they were adolescents fighting for anarchy in the UK.
+          They still have a passion for raw, old skool punk music, so they decided to start a band, called 'The Chiefs'.
+          Sid is the lead vocalist, Frank plays the guitar, Rocco the bass guitar and Reed the drums.
+          Their sound is innovative, yet old school and that is what makes them so unique.
+          Now that they've joining British Punk Music, their songs will hit the charts in no-time.
         </p>
-        <a href="Shop.html#chief">To there shop</a>
+        <a class="link" href="Shop.html#chief">To there shop</a>
         </div>
 
         <img
