--- a/Shop.html
+++ b/Shop.html
@@ -179,7 +179,11 @@
               <img class="shop_img" src="style/P3V_I.jpg" height="130">
               <img class="shop_img" src="style/P3A_I.jpg" height="130">
               <p>
-
+                Cut it out
+                Literally
+                Cutted out of the paper.
+                Or is it really about something else?
+                Is cutting it out the best solution?
                 <button class="buy" type="button">14,99</button>
               </p>
 
